# LearningSDL

./: CMakeLists.txt  README.md
include/: cleanup.h  res_path.h
src/: main.cpp
